# AutoScout

./: .env-example  .gitignore  README.md  compose.yaml  main.py  pyproject.toml
agents/: __init__.py  content_curator.py  critic.py  deep_analyst.py  docker_executor.py  document_analyst.py  engineer.py  execution_manager.py  idea_hater.py  idea_maker.py  insight_synthesizer.py  interest_profiler.py  note_keeper.py  plan_reviewer.py  planner.py  research_lead.py  researcher.py  settings.py  web_scout.py
app/: config.yaml  main.py
context/: __init__.py  analysis_depth.md  curation_criteria.md  digest_format.md  interest_categories.md  loader.py  research_guidelines.md  research_roles.md
db/: session.py  url.py
docs/: autoscout_playbook.md  research_workflow.md
interests/: active_categories.md
teams/: control_team.py  coordinate_team.py  planning_team.py  task_team.py
workflows/: __init__.py  daily_digest.py  research_workflow.py
